tests/NormalTests/paczka1/fuzzy1/22724911.err
Error in line 1: Vwnwr A548 43,4
Error in line 6: 5ObVF6zW9qr A548 61,6
Error in line 5: D27 S573 206,9
Error in line 10: 5ObVF6zW9qr S573 81,9
Error in line 20: 5ObVF6zW9qr S273 36,9
Error in line 19: Vwnwr A791 48,1
